--- a/stylesheets/style.sass
+++ b/stylesheets/style.sass
@@ -1,17 +1,30 @@
 body
 	padding: 2em
 
+h1, p
+	margin: 0
 
-.person
-	padding: 0 2em
-	display: inline-block
-	background: blue
-	color: white
-	float: left
-	margin: 10px
+.container
+	max-width: 440px
+	margin: 0 auto
+
+.item
 	text-align: center
+	display: inline-block
+	background: #FEFEFE
+	border: 2px solid #FAFAFA
+	box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4)
+	margin: 0 2px 15px
+	padding: 5px
+	background: -webkit-linear-gradient(45deg, #FFF, #F9F9F9)
+	width: 200px
+
 	&.inactive
 		background: green
 	&.active
 		background: red
+
+	img
+		max-width: 200px
+		max-height: 200px
 
