create new approach to search

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -5,7 +5,7 @@ h1, p {
   margin: 0; }
 
 .container {
-  max-width: 675px;
+  max-width: 100%;
   margin: 0 auto; }
 
 .item {
@@ -14,14 +14,18 @@ h1, p {
   background: #fefefe;
   border: 2px solid #fafafa;
   box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
-  margin: 0 2px 15px;
+  margin: 10px;
   padding: 5px;
   background: -webkit-linear-gradient(45deg, white, #f9f9f9);
-  width: 200px; }
+  width: 200px;
+  height: 380px; }
   .item.inactive {
-    background: green; }
+    opacity: 0.5; }
   .item.active {
-    background: red; }
+    opacity: 1; }
   .item img {
     max-width: 200px;
     max-height: 200px; }
+
+.highlighted {
+  background-color: yellow; }
