--- a/stylesheets/style.sass
+++ b/stylesheets/style.sass
@@ -17,19 +17,11 @@ h1, p
 	margin: 10px
 	padding: 5px
 	background: -webkit-linear-gradient(45deg, #FFF, #F9F9F9)
-	width: 200px
-	height: 380px
-
-
-	&.inactive
-		opacity: .5
-	&.active
-		opacity: 1
-
+	width: 300px
+	
 
 	img
-		max-width: 200px
-		max-height: 200px
+		width: 100%
 
 
 
