--- a/stylesheets/style.sass
+++ b/stylesheets/style.sass
@@ -16,14 +16,9 @@ h1, p
 	box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4)
 	margin: 10px
 	padding: 5px
-	background: -webkit-linear-gradient(45deg, #FFF, #F9F9F9)
+	background: rgb(210,210,210)
 	width: 300px
 	
 
 	img
 		width: 100%
-
-
-
-.highlighted
-	// background-color: yellow
