--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,5 +1,6 @@
 body {
-  padding: 2em; }
+  padding: 2em;
+  background: #f2f2f2; }
 
 h1, p {
   margin: 0; }
@@ -14,9 +15,9 @@ h1, p {
   background: #fefefe;
   border: 2px solid #fafafa;
   box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
-  margin: 10px;
-  padding: 5px;
-  background: #d2d2d2;
+  padding: 10px 10px 20px 10px;
+  margin: 5px;
+  background: white;
   width: 300px; }
   .item img {
     width: 100%; }
