--- a/stylesheets/style.sass
+++ b/stylesheets/style.sass
@@ -1,5 +1,6 @@
 body
 	padding: 2em
+	background: #f2f2f2
 
 h1, p
 	margin: 0
@@ -14,9 +15,10 @@ h1, p
 	background: #FEFEFE
 	border: 2px solid #FAFAFA
 	box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4)
-	margin: 10px
-	padding: 5px
-	background: rgb(210,210,210)
+	
+	padding: 10px 10px 20px 10px
+	margin: 5px
+	background: #fff
 	width: 300px
 	
 
