--- a/stylesheets/style.sass
+++ b/stylesheets/style.sass
@@ -24,3 +24,24 @@ h1, p
 
 	img
 		width: 100%
+
+
+
+.filters
+	margin: 0
+	margin-left: 10px
+	padding: 0
+
+	li
+		list-style: none
+
+		span
+			display: inline-block
+			width: 10px
+			height: 10px
+			border: #000 1px solid
+
+			&.active
+				background: #000
+
+	
